--- a/Phase 2/React/onlineshopping/src/productComponent.css
+++ b/Phase 2/React/onlineshopping/src/productComponent.css
@@ -5,7 +5,7 @@
     margin-left: 45px;
     /* padding: 30px; */
     
-    background: white;
+    background:#1f1c18; ;
     /* border: solid black 1px; */
 }
 
@@ -20,13 +20,15 @@
 }
 
 .name1>h1{
-    background: lightskyblue;
-    margin-top: 0px; 
+    background: #8E0E00;
+    margin-top: 0px;
+    color:#ffffff; 
 }
 
 .name2>h1{
-    background: lightskyblue;
-    margin-bottom: 0px; 
+    background: #8E0E00;
+    margin-bottom: 0px;
+    color:#ffffff; 
 }
 
 img{
@@ -34,7 +36,8 @@ img{
     height:200px;
 }
 .main2{
-    background: lightskyblue;
+    background: #8E0E00;
+    color:#ffffff; 
 }
 
 .btn-danger{
